--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,24 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('springCloudVersion', "2022.0.2")
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
 
 	compileOnly 'org.projectlombok:lombok'
