--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,18 @@
 spring:
   application:
-    name: user-service
+    name: survey-service
   data:
     mongodb:
-      database: user-service
+      database: survey-service
       host: localhost
       port: 27017
+      password: bdung
+      username: mongoadmin
+
+de:
+  flapdoodle:
+    mongodb:
+
+      embedded:
+        version: 6.0.5
+
