--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.15.1'
 
 
 	compileOnly 'org.projectlombok:lombok'
