--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,6 @@
+server:
+  port: 8083
+
 spring:
   application:
     name: survey-service
@@ -8,7 +11,9 @@ spring:
       port: 27017
       password: bdung
       username: mongoadmin
-
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
 de:
   flapdoodle:
     mongodb:
