embedded mongo only for tests

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,18 +3,11 @@ spring:
     name: survey-service
   data:
     mongodb:
-      database: survey-service
       host: localhost
       port: 27017
       password: bdung
       username: mongoadmin
+      authentication-database: admin
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
-de:
-  flapdoodle:
-    mongodb:
-
-      embedded:
-        version: 6.0.5
-
