--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,11 +3,11 @@ spring:
     name: survey-service
   data:
     mongodb:
-      host: localhost
-      port: 27017
-      password: bdung
-      username: mongoadmin
-      authentication-database: admin
+      host: rc1a-iaj8kf6jaomgk9lf.mdb.yandexcloud.net
+      port: 27018
+      password: goeasysurvey
+      username: survey-service
+      authentication-database: survey-service
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
