--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ spring:
       port: 27018
       password: goeasysurvey
       username: survey-service
+      database: survey-service
       authentication-database: survey-service
 springdoc:
   swagger-ui:
