--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.15.1'
-
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
