--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,11 @@ spring:
       username: survey-service
       database: survey-service
       authentication-database: survey-service
+
+server:
+  error:
+    include-message: always
+
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
